--- a/home.css
+++ b/home.css
@@ -5,21 +5,7 @@ body {
     background-image: linear-gradient(orange, white, green);
 }
 
-.header{
-    height: 10vh;
-    width: 100%;
-    background-color: wheat;
-    text-align: center;
-    line-height: 400%;
-}
-
-.link{
-    transition: 2s;
-}
-.link:hover{
-    transform: scale(1.2);
-}
-.link ul{
+.link {
     height: 5vh;
     width: 50%;
     background-color: wheat;
@@ -27,20 +13,13 @@ body {
     line-height: 200%;
     margin-left: 295px;
     font-size: 17px;
+    /* transition: 1s; */
 
 }
-
-/* .link ul:hover{
-    height: 7vh;
-    width: 60%;
-    line-height: 300%;
-    font-size: 20px;
-} */
 /* a:hover{
     color: red;
     text-decoration: none;
-    font-size: 30px;
-    transition: 1s;
+    font-size: 20px;
 } */
 .link a{
     margin-left: 50px;
