--- a/contect.css
+++ b/contect.css
@@ -1,47 +1,39 @@
 body {
     color: black;
-    height: 130vh;
+    height: 205vh;
     /* width: 100%; */
-    background-image: linear-gradient(orange, white, green);
+    background-color: #E6E6FA;
 }
-
-.link {
-    height: 5vh;
-    /* width: 100%; */
-    background-color: white;
+.link{
+    height: 6vh;
+    width: 100%;
+    background-color: #C8E6C9;
     text-align: center;
-    line-height: 200%;
+    text-align: center;
     font-size: 17px;
     position: sticky;
-    top: 3%;
-    /* transition: 1s; */
-}
-
-.link ul{
+    top: 0%;
     list-style-type: none;
     display: flex;
+    margin-top: 10px;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    line-height: 35px;
 }
-
-/* a:hover{
-    color: red;
-    text-decoration: none;
-    font-size: 20px;
-} */
 .link a{
     margin-left: 50px;
     text-align: center;
     text-decoration: none;
-    /* display: flex; */
-    /* margin-right: 60px ; */
+}
+
+.myInput{
+    border: none;
 }
 .leater{
     font-family: sans-serif;
     font-style:inherit;
-}
-
-#first{
-    margin-left: 300px;
 }
 
 .tital{
@@ -61,4 +53,64 @@ body {
     text-align: center;
     line-height: 200%;
     transition: ease-in-out;
+}
+@media screen and (max-width : 567px){
+    .link {
+        height: 30vh;
+        width: 100%;
+        background-color: #C8E6C9;
+        text-align: center;
+        line-height: 200%;
+        font-size: 17px;
+        position: sticky;
+        top: 0%;
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+    }
+    .link a{
+        margin-left: 20px;
+        margin-right: 20px;
+        text-align: center;
+        text-decoration: none;
+    }
+    form{
+        display: flex;
+        flex-direction: column;
+        justify-self: center;
+        width: 50vh;
+        box-shadow: 0px 0px 12px grey;
+    }
+    fieldset{
+        border-color: black;
+        width: 90%;
+        border-radius: 10px;
+        margin-left: 20px;
+        background:transparent;
+    }
+    /* #first{
+        margin-left: 40px;
+    } */
+}
+p::first-letter{
+    font-size: 50px;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    width: 100vh;
+    box-shadow: 0px 0px 12px grey;
+}
+fieldset{
+    border-color: black;
+    width: 90%;
+    border-radius: 10px;
+    margin-left: 20px;
+    background:transparent;
+}
+a:hover{
+    color: #955251      ;
+    font-size: 30px;
 }
