--- a/home.css
+++ b/home.css
@@ -1,62 +1,58 @@
 body {
     color: black;
-    height: 375vh;
-    /* width: 100%; */
-    background-image: linear-gradient(orange, white, green);
+    height: 393vh;
+    background-color: #E6E6FA;
+    /* background-position: center; */
+    /* background-size: cover; */
+    /* background-repeat: no-repeat; */
+    /* backdrop-filter: blur(10px); */
 }
 
 .header{
-    background-color: wheat;
+    background-color: #FFE5B4;
     height: 7vh;
     text-align: center;
     line-height: 300%;
-    
 }
 
-.link {
-    height: 5vh;
+
+.link{
+    height: 6vh;
     width: 100%;
-    background-color: white;
+    background-color: #C8E6C9;
     text-align: center;
-    line-height: 200%;
+    text-align: center;
     font-size: 17px;
     position: sticky;
-    top: 5%;
-    /* transition: 1s; */
-}
-
-.link ul{
+    top: 0%;
     list-style-type: none;
     display: flex;
+    margin-top: 10px;
     text-align: center;
-    
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    line-height: 35px;
 }
 
-/* a:hover{
-    color: red;
-    text-decoration: none;
-    font-size: 20px;
-} */
+
 .link a{
     margin-left: 50px;
     text-align: center;
     text-decoration: none;
-
-    /* display: flex; */
-    /* margin-right: 60px ; */
 }
 
+  
 .leater{
     font-family: sans-serif;
     font-style:inherit;
 }
 
-#first{
-    margin-left: 370px;
-}
+/* #first{
+    margin-left: 420px;
+} */
 
 .tital{
-    /* background-color: wheat; */
     height: 5vh;
     color: darkblue;
 }
@@ -68,8 +64,43 @@ body {
 .footer{
     height: 12vh;
     width: 100%;
-    background-color: wheat;
+    background-color: #FFE5B4;
     text-align: center;
     line-height: 200%;
     transition: ease-in-out;
+}
+
+p::first-letter{
+    font-size: 50px;
+}
+a:hover{
+    color: #955251      ;
+    font-size: 30px;
+}
+
+
+@media screen and (max-width : 567px){
+    .link {
+        height: 30vh;
+        width: 100%;
+        background-color: #C8E6C9;
+        text-align: center;
+        line-height: 200%;
+        font-size: 17px;
+        position: sticky;
+        top: 0%;
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        margin-top: 10px;
+    }
+    .link a{
+        margin-left: 20px;
+        margin-right: 20px;
+        text-align: center;
+        text-decoration: none;
+    }
+    /* #first{
+        margin-left: 40px;
+    } */
 }
