--- a/contect.css
+++ b/contect.css
@@ -3,6 +3,10 @@ body {
     height: 205vh;
     /* width: 100%; */
     background-color: #E6E6FA;
+    animation: main_header;
+    animation-duration: 0.5s;
+    animation-direction: normal;
+/* position: relative; */
 }
 .link{
     height: 6vh;
@@ -21,6 +25,33 @@ body {
     flex-direction: row;
     justify-content: center;
     line-height: 35px;
+    animation: nav 2s ease-in 1s normal backwards;
+}
+@keyframes nav{
+    from{
+        opacity: 0;
+        top: 200px;
+    }
+    to{
+        top: 0px;
+    }
+}
+.conteinar{
+    animation: main 1s ease-in 3s normal backwards;
+}
+@keyframes main{
+    from{
+        opacity: 0;
+        top: 200px;
+    }
+    to{
+        top: 0px;
+    }
+}
+mark{
+    background-color: #6B5B95;
+    padding: 5px 10px;
+    color: white;
 }
 .link a{
     margin-left: 50px;
@@ -104,11 +135,14 @@ form{
     box-shadow: 0px 0px 12px grey;
 }
 fieldset{
-    border-color: black;
+    border-color: #add8e6;
     width: 90%;
-    border-radius: 10px;
+    border-radius: 0px;
     margin-left: 20px;
     background:transparent;
+}
+legend{
+    color: darkblue;
 }
 a:hover{
     color: #955251      ;
