--- a/culture.css
+++ b/culture.css
@@ -2,7 +2,19 @@ body {
     color: black;
     height: 225vh;
     /* width: 100%; */
-    background-color: #E6E6FA;
+    background-color: #E6E6FA;animation: main_header;
+    animation-duration: 0s;
+    animation-direction: normal;
+/* position: relative; */
+}
+@keyframes main_header{
+    from{
+        opacity: 0;
+        top: 200px;
+    }
+    to{
+      top: 0px;
+    }
 }
 .link{
     height: 6vh;
@@ -21,6 +33,33 @@ body {
     flex-direction: row;
     justify-content: center;
     line-height: 35px;
+    animation: nav 1s ease-in 1s normal backwards;
+}
+@keyframes nav{
+    from{
+        opacity: 0;
+        top: 200px;
+    }
+    to{
+        top: 0px;
+    }
+}
+.conteinar{
+    animation: main 1s ease-in 3s normal backwards;
+}
+@keyframes main{
+    from{
+        opacity: 0;
+        top: 200px;
+    }
+    to{
+        top: 0px;
+    }
+}
+mark{
+    background-color: #6B5B95;
+    padding: 5px 10px;
+    color: white;
 }
 .link a{
     margin-left: 50px;
